<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="api_key">51549e7b81564820b4194eba08d56ead</string>
    <string name="tts_text">This is a demo of Microsoft Cognitive Services Text to Speech API.</string>
    <string name="tts_text_zh">松开手指,取消发送.</string>
    <string name="play_button_name">Play</string>
    <string name="stop_button_name">Stop</string>
    <string name="tts_text_ar">يتعذر حذف جهات الاتصال من حساباتك المخصصة للقراءة فقط، ولكن يمكن إخفاؤها</string>
    <string name="tts_text_bg">Този контакт е само за четене. Не може да бъде изтрит, но можете да го скриете</string>
    <string name="tts_text_ca">"Vols desar els canvis que ja has aplicat i enllaçar els contactes seleccionats?"</string>
    <string name="tts_text_cs">"Chcete uložit provedené změny, zrušit propojení kontaktu a vytvořit několik samostatných kontaktů?"</string>
    <string name="tts_text_da">"Vil du gemme de ændringer, du allerede har foretaget, og sammenflette med den valgte kontaktperson?"</string>
    <string name="tts_text_fr">"Ce contact est en lecture seule. Il ne peut pas être supprimé, mais vous pouvez le masquer."</string>
    <string name="tts_text_es">Este contacto es de solo lectura. No se puede eliminar, pero sí ocultar.</string>
    <string name="tts_text_hi">\"क्या आप पहले से किए गए बदलावों को सहेजना और इस संपर्क को एकाधिक संपर्कों में अनलिंक करना चाहते हैं?</string>
    <string name="tts_text_vi">Bạn có muốn lưu các thay đổi mình đã thực hiện và hủy liên kết liên hệ này thành nhiều liên hệ không</string>
    <string name="tts_text_hk">這是唯讀聯絡人，因此無法刪除，但可加以隱藏</string>
    <string name="tts_text_tw">您要儲存目前所做變更，並將這個聯絡人的連結取消，還原為多筆聯絡人資料嗎</string>
    <string name="tts_text_ru">"Сохранить изменения и разделить этот контакт?"</string>
    <string name="home_label">THome</string>
    <string name="final_response_error">Failed to record your voice</string>
    <string name="app_name">Translator</string>
    <string name="compose_message">Compse message</string>
    <string name="recoder_normal">按住 说话</string>
    <string name="recoder_recording">松开 结束</string>
    <string name="recoder_want_cancel">松开手指,取消发送</string>
    <string name="recoder_how_to_cancel">上滑手指,取消发送</string>
    <string name="recoder_too_short">录音时间太短</string>
    <string name="code">CODE:</string>
    <string name="no_network">NO network!</string>
    <string name="need_wifi">PLS CONNECT WIFI!</string>
    <string name="find_code">Find</string>
    <string name="msg_txt_default">default </string>
    <string name="stt_error">Sound to text error!</string>
    <string name="compose_auto_text">Auto report</string>
    <string name="compose_textsize_text">Text size</string>
    <string name="compose_end_text">Hang up</string>
    <string name="language_name_zh_cn" translatable="false">"普通话"</string>
    <string name="language_name_zh_hk" translatable="false">"广东话"</string>
    <string name="language_name_en_us" translatable="false">"English (US)"</string>
    <string name="language_name_en_au" translatable="false">"English (AU)"</string>
    <string name="language_name_en_ca" translatable="false">"English (CA)"</string>
    <string name="language_name_en_gb" translatable="false">"English (UK)"</string>
    <string name="language_name_en_in" translatable="false">"English (IN)"</string>
    <string name="language_name_en_nz" translatable="false">"English (NZ)"</string>
    <string name="language_name_ar_eg" translatable="false">"Arabic (Egypt)"</string>
    <string name="language_name_da_dk" translatable="false">"Danish (Denmark)"</string>
    <string name="language_name_de_de" translatable="false">"German (Germany)"</string>
    <string name="language_name_es_es" translatable="false">"Spanish (Spain)"</string>
    <string name="language_name_es_mx" translatable="false">"Spanish (Mexico)"</string>
    <string name="language_name_fi_fi" translatable="false">"Finnish (Finland)"</string>
    <string name="language_name_fr_ca" translatable="false">"French (Canada)"</string>
    <string name="language_name_fr_fr" translatable="false">"French (France)"</string>
    <string name="language_name_hi_in" translatable="false">"Hindi (India)"</string>
    <string name="language_name_it_it" translatable="false">"Italian (Italy)"</string>
    <string name="language_name_ja_jp" translatable="false">"Japanese (Japan)"</string>
    <string name="language_name_ko_kr" translatable="false">"Korean (Korea)"</string>
    <string name="language_name_pl_pl" translatable="false">"Polish (Poland)"</string>
    <string name="language_name_pt_br" translatable="false">"Portuguese (Brazil)"</string>
    <string name="language_name_pt_pt" translatable="false">"Portuguese (Portugal)"</string>
    <string name="language_name_ru_ru" translatable="false">"Russian (Russia)"</string>
    <string name="language_name_sv_se" translatable="false">"Swedish (Sweden)"</string>
    <string name="missing_required_permission">You have disabled a required permission.</string>
    <string name="setting_title">Settings</string>
    <string name="wifi_setting_button_label">WiFi</string>
    <string name="pair_setting_button_label">Pair</string>
    <string name="role_setting_button_label">Role</string>
    <string name="common_setting_button_label">Common setting</string>
    <string name="storage_setting_button_label">Storage</string>
    <string name="ota_setting_button_label">Ota</string>
    <string name="about_setting_button_label">About</string>
    <string name="device_info_title">Device info</string>
    <string name="device_name">Device name:</string>
    <string name="device_model">Device model:</string>
    <string name="serial_number">Serial number:</string>
    <string name="mac_address">Mac address:</string>
    <string name="device_version">Device version:</string>
    <string name="feedback_title">Improvement advice</string>
    <string name="feedback_question_type">Question type:</string>
    <string name="feedback_question_description">Question description:</string>
    <string name="feedback_contacts">Contact number:</string>
    <string name="feedback_submit">Submit</string>
    <string name="reset_factory_label">Reset factory</string>
    <string name="storage_save">Save</string>
    <string name="storage_clear">Clear data</string>
    <string name="title_brightness_level">Brightness level</string>
    <string name="title_battery_percentage">Battery percentage</string>
    <string name="title_languages">System languages</string>
    <string name="title_font_size">Font size</string>
    <string name="title_time_zone">Time zone</string>
    <string name="title_date_time">Date &amp; time</string>
    <string name="title_24_hour_format">Use 24-hour format</string>
    <string name="title_auto_time_zone">Automatic time zone</string>
    <string name="ota_download_error">An error occurred while downloading the application</string>
    <string name="ota_text">Your app is up to date.</string>
    <string name="ota_update">Check for update</string>
    <string name="ota_sd_error">Sd card is not found.</string>
    <string name="ota_negative_button">Update later</string>
    <string name="ota_positive_button">update immediately</string>
    <string name="ota_update_failed">Application update failed</string>
    <string name="ota_check_failed">Application version detection failed</string>
    <string name="ota_new_version">New version: </string>
    <string name="ota_current_version">Current version: </string>
    <string name="ota_network_error">Unable to connect to network.</string>
    <string-array name="storage_top_columns">
        <item>Total memory</item>
        <item>Used memory</item>
        <item>Available memory</item>
    </string-array>
    <string-array name="storage_bottom_columns">
        <item>Total memory</item>
        <item>Used memory</item>
        <item>Available memory</item>
    </string-array>
    <string-array name="entry_values_font_size" translatable="false">
        <item>0.85</item>
        <item>1</item>
        <item>1.1</item>
        <item>1.2</item>
    </string-array>
    <string-array name="custom_entries_font_size">
        <item>Small</item>
        <item>Default</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>
    <string-array name="entries_system_languages" translatable="false">
        <item>中文</item>
        <item>English</item>
    </string-array>
    <string-array name="entries_values_system_languages" translatable="false">
        <item>zh_CN</item>
        <item>en_US</item>
    </string-array>
    <string-array name="timezone_labels">
        <item>"Marshall Islands"</item>
        <item>"Midway Island"</item>
        <item>"Hawaii"</item>
        <item>"Alaska"</item>
        <item>"Pacific Time"</item>
        <item>"Tijuana"</item>
        <item>"Arizona"</item>
        <item>"Chihuahua"</item>
        <item>"Mountain Time"</item>
        <item>"Central America"</item>
        <item>"Central Time"</item>
        <item>"Mexico City"</item>
        <item>"Saskatchewan"</item>
        <item>"Bogota"</item>
        <item>"Eastern Time"</item>
        <item>"Venezuela"</item>
        <item>"Atlantic Time (Barbados)"</item>
        <item>"Atlantic Time (Canada)"</item>
        <item>"Manaus"</item>
        <item>"Santiago"</item>
        <item>"Newfoundland"</item>
        <item>"Brasilia"</item>
        <item>"Buenos Aires"</item>
        <item>"Greenland"</item>
        <item>"Montevideo"</item>
        <item>"Mid-Atlantic"</item>
        <item>"Azores"</item>
        <item>"Cape Verde Islands"</item>
        <item>"Casablanca"</item>
        <item>"London, Dublin"</item>
        <item>"Amsterdam, Berlin"</item>
        <item>"Belgrade"</item>
        <item>"Brussels"</item>
        <item>"Sarajevo"</item>
        <item>"Windhoek"</item>
        <item>"W. Africa Time"</item>
        <item>"Amman, Jordan"</item>
        <item>"Athens, Istanbul"</item>
        <item>"Beirut, Lebanon"</item>
        <item>"Cairo"</item>
        <item>"Helsinki"</item>
        <item>"Jerusalem"</item>
        <item>"Minsk"</item>
        <item>"Harare"</item>
        <item>"Baghdad"</item>
        <item>"Moscow"</item>
        <item>"Kuwait"</item>
        <item>"Nairobi"</item>
        <item>"Tehran"</item>
        <item>"Baku"</item>
        <item>"Tbilisi"</item>
        <item>"Yerevan"</item>
        <item>"Dubai"</item>
        <item>"Kabul"</item>
        <item>"Islamabad, Karachi"</item>
        <item>"Ural'sk"</item>
        <item>"Yekaterinburg"</item>
        <item>"Kolkata"</item>
        <item>"Sri Lanka"</item>
        <item>"Kathmandu"</item>
        <item>"Astana"</item>
        <item>"Yangon"</item>
        <item>"Krasnoyarsk"</item>
        <item>"Bangkok"</item>
        <item>"Beijing"</item>
        <item>"Hong Kong"</item>
        <item>"Irkutsk"</item>
        <item>"Kuala Lumpur"</item>
        <item>"Perth"</item>
        <item>"Taipei"</item>
        <item>"Seoul"</item>
        <item>"Tokyo, Osaka"</item>
        <item>"Yakutsk"</item>
        <item>"Adelaide"</item>
        <item>"Darwin"</item>
        <item>"Brisbane"</item>
        <item>"Hobart"</item>
        <item>"Sydney, Canberra"</item>
        <item>"Vladivostok"</item>
        <item>"Guam"</item>
        <item>"Magadan"</item>
        <item>"Auckland"</item>
        <item>"Fiji"</item>
        <item>"Tonga"</item>
        <item>"Jakarta"</item>
    </string-array>
    <string name="status_off">OFF</string>
    <string name="status_on">ON</string>
    <string name="wifi_switch">WiFi</string>
</resources>