<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout android:id="@+id/ll_wifi_switch"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="#cccccc">

        <!-- <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/wifi_switch"/>
        <CheckBox android:id="@+id/cb_wifi_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/> -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.5"
            android:text="@string/wifi_switch"
            android:textSize="22dp"
            android:textColor="#000000" />
        <Switch
            android:id="@+id/switch_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:textOff="@string/status_off"
            android:textOn="@string/status_on"
            android:thumb="@drawable/thumb_selector"
            android:track="@drawable/track_selector" />
        <!-- <TextView android:id="@+id/tv_connectInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dip"/> -->
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_wifi_state"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:gravity="center"
        android:visibility="gone">
        <TextView android:id="@+id/tv_wifi_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <ListView android:id="@+id/lv_wifi"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"/>
</LinearLayout>