<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/id_compose_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ebebeb" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rgk.android.translator.view.AudioRecorderButton
                android:id="@+id/id_recorder_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/btn_recorder_normal"
                android:gravity="center"
                android:minHeight="0dp"
                android:padding="5dp"
                android:text="@string/recoder_normal"
                android:textColor="#727272"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cccccc" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_voice_img"
            android:layout_width="@dimen/compose_msg_sidebar_img_size"
            android:layout_height="@dimen/compose_msg_sidebar_img_size"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/id_language_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_end_text" />

        <ImageView
            android:id="@+id/id_auto_img"
            android:layout_width="@dimen/compose_msg_sidebar_img_size"
            android:layout_height="@dimen/compose_msg_sidebar_img_size"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_auto_text" />

        <ImageView
            android:id="@+id/id_text_size_big"
            android:layout_width="@dimen/compose_msg_sidebar_img_size"
            android:layout_height="@dimen/compose_msg_sidebar_img_size"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_textsize_text" />

        <ImageView
            android:id="@+id/id_compose_end_img"
            android:layout_width="@dimen/compose_msg_sidebar_img_size"
            android:layout_height="@dimen/compose_msg_sidebar_img_size"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_end_text" />

    </LinearLayout>
</LinearLayout>