<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="50dp"
    android:paddingEnd="50dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Text and sound storage"/>
    <RadioGroup
        android:id="@+id/save_type"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <RadioButton
            android:id="@+id/not_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_factory_label" />
        <RadioButton
            android:id="@+id/only_save_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_factory_label"/>
        <RadioButton
            android:id="@+id/only_save_sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_factory_label"/>
        <RadioButton
            android:id="@+id/both_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_factory_label"/>
    </RadioGroup>
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/storage_save"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_factory_label"/>
        <Button
            android:id="@+id/clear_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_clear"/>
    </LinearLayout>

    <com.rgk.android.translator.settings.storage.StorageTableView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:topRowBackground="#00ff00"
        app:bottomRowBackground="#ffffff"
        app:dividerColor="#000000"
        app:textColor="#000000"
        app:textSize="20sp"
        app:topColumns="@array/storage_top_columns"
        app:bottomColumns="@array/storage_bottom_columns"/>

</LinearLayout>